bonus/confs/ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeybull-app-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smokeybull-app
            port:
              number: 80
