bonus/confs/ingress.gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: gitlab.localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitlab
              port:
                number: 80
